--- a/MyGame/app/src/main/res/layout/activity_main.xml
+++ b/MyGame/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>
     <Button
-            android:text="reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/textView"
             android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:id="@+id/button1"/>
+            android:id="@+id/button1" android:text="@string/button1"/>
     <ImageView
             android:src="@drawable/box"
             android:layout_width="wrap_content"
@@ -51,6 +50,7 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.84" app:layout_constraintVertical_bias="0.294"/>
+            app:layout_constraintHorizontal_bias="0.84"
+            app:layout_constraintVertical_bias="0.294"/>
 
 </android.support.constraint.ConstraintLayout>
