--- a/MyGame/app/src/main/res/layout/activity_main.xml
+++ b/MyGame/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,23 @@
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Find the ball"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>
+            android:layout_height="15dp"
+            android:text="@string/textV"
+            android:id="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textStyle="bold" android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/box2"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/textView"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:id="@+id/button1" android:text="@string/button1"/>
+            android:id="@+id/button1" android:text="@string/button1"
+            app:layout_constraintVertical_bias="0.429" app:layout_constraintTop_toBottomOf="@+id/textView"/>
     <ImageView
             android:src="@drawable/box"
             android:layout_width="wrap_content"
@@ -32,16 +35,17 @@
             android:layout_marginTop="8dp" app:layout_constraintVertical_bias="0.294"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.139"/>
+            app:layout_constraintHorizontal_bias="0.139" android:contentDescription="@string/box1"/>
     <ImageView
             android:src="@drawable/box"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:id="@+id/box2" android:layout_marginTop="136dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.0"/>
+            android:contentDescription="@string/box2" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"/>
     <ImageView
             android:src="@drawable/box"
             android:layout_width="wrap_content"
@@ -51,6 +55,6 @@
             android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.84"
-            app:layout_constraintVertical_bias="0.294"/>
+            app:layout_constraintVertical_bias="0.294" android:contentDescription="@string/box3"/>
 
 </android.support.constraint.ConstraintLayout>
